--- a/main.css
+++ b/main.css
@@ -1,1 +1,26 @@
+body{
+	background-color: black;
+}
+
+nav{
+  height: 6000px;
+  width: 200px;
+  float: left;
+  padding: 5px;
+  line-height: 30px;
+}
+
+footer{
+  text-align: center;
+  margin-right: 200px;
+}
+
+#memeimage{
+  margin-right: 200px;
+}
+
+h1{
+	color: teal;
+	text-align: 15px;
+}
 
