--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 body{
-	background-color: gray;
+	background-color: plum;
 }
 
 nav{
@@ -11,7 +11,7 @@ nav{
 }
 
 p {
-  margin-top: 200px;
+  margin-top: 100px;
 }
 
 footer{
@@ -21,6 +21,11 @@ footer{
 
 
 h1{
-	color: teal;
-	text-align: 15px;
+	color: royalblue;
+	text-align: 25px;
+}
+
+h3{
+	color: darkorchid;
+	text-align: 35px;
 }
